--- a/wp-content/themes/pariscope/resources/scss/blocks/_wp-block-embed.scss
+++ b/wp-content/themes/pariscope/resources/scss/blocks/_wp-block-embed.scss
@@ -1,27 +1,41 @@
-////
-/// Embed block.
-///
-/// @group  Blocks
-/// @author Bryan Hoffman <bryan@spigotdesign.com>
-
-////
+// Embed Block
 
 .wp-block-embed {
+    position: relative;
+    padding-bottom: 56.25%;
 
-	&-vimeo {}
-	&-youtube {}
+    /* 16:9 */
+    padding-top: 0px;
+    height: 0;
+    overflow: hidden;
 
-	&.is-type-image {}
-	&.is-type-audio {}
-	&.is-type-rich {} // text, twitter, etc.
-	&.is-type-video {}
+    &-vimeo {}
 
-	&.is-provider-vimeo {}
+    &-youtube {}
 
-	iframe {}
+    &.is-type-image {}
 
-	figcaption {
-		margin-top: 0.5em;
-		text-align: center;
-	}
+    &.is-type-audio {}
+
+    &.is-type-rich {}
+
+    // text, twitter, etc.
+    &.is-type-video {}
+
+    &.is-provider-vimeo {}
+
+    iframe {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    figcaption {
+        margin-top: 0.5em;
+        text-align: center;
+    }
 }
