--- a/wp-content/themes/pariscope/resources/scss/blocks/_wp-block-gallery.scss
+++ b/wp-content/themes/pariscope/resources/scss/blocks/_wp-block-gallery.scss
@@ -4,91 +4,99 @@
 /// @group  Blocks
 /// @author Bryan Hoffman <bryan@spigotdesign.com>
 
-////
-
+// The wrapper element for the entire gallery.
 .wp-block-gallery {
-	display:         flex;
-	flex-wrap:       wrap;
-	list-style-type: none;
-	padding:         0;
-	margin:          0 -8px 0 -8px;
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+    padding: 0;
+    padding-left: 0 !important;
+    margin: 0 -8px 0 -8px;
+}
 
-	&.is-cropped {}
+// The wrapper for individual gallery images/figures.
+.blocks-gallery-item {
+    margin: 8px;
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
 
-	&.columns-1 {}
-	&.columns-2 {}
-	&.columns-3 {}
+    // Image figure.
+    figure {
+        margin: 0;
+        height: 100%;
 
-	.blocks-gallery-item {
-		margin:          8px;
-		display:         flex;
-		flex-grow:       1;
-		flex-direction:  column;
-		justify-content: center;
-		position:        relative;
+        // IE11 doesn't support flex and can't read this.
+        @supports (position: sticky) {
+            display: flex;
+            align-items: flex-end;
+            justify-content: flex-start;
+        }
+    }
 
-		figure {
-			margin:      0;
-			height:      100%;
-			display:     flex;
-			align-items: flex-end;
-		}
+    img {
+        display: block;
+        max-width: 100%;
+        height: auto;
 
-		img {
-			display:   block;
-			max-width: 100%;
-			height:    auto;
-		}
+        // Set an explicit width for IE.
+        width: 100%;
 
-		figcaption {
-			display:    block;
-			width:      100%;
-			padding:    10px;
-			text-align: center;
+        // IE11 can't read this.
+        @supports (position: sticky) {
+            width: auto;
+        }
+    }
 
-			img {
-				display: inline;
-			}
-		}
-	}
+    figcaption {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        max-height: 100%;
+        padding: 40px 10px 5px;
+        text-align: center;
+        color: color(white);
+        background: linear-gradient(0deg, rgba(color(black), 0.7) 0, rgba(color(black), 0.3) 60%, transparent);
 
-	&.is-cropped .blocks-gallery-item {
-		a,
-		img {
-			flex:       1;
-			width:      100%;
-			height:     100%;
-			object-fit: cover;
+        img {
+            display: inline;
+        }
+    }
+}
 
-		}
-	}
+// Cropped images.
+.is-cropped .blocks-gallery-item {
+    a,
+    img {
+        flex: 1;
+        width: 100%;
 
-	// Fallback to 2 columns.
-	.blocks-gallery-item {
-		width: calc( 100% / 2 - 16px );
-	}
+        // IE11 doesn't support object-fit.
+        @supports (position: sticky) {
+            flex: 1;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+}
 
-	// 1 column.
-	&.columns-1 .blocks-gallery-item {
-		width: calc( 100% / 1 - 16px );
-	}
+// Fallback to 2 columns.
+.blocks-gallery-item {
+    width: calc( 100% / 2 - 16px );
+}
 
-	// 3-8 columns on larger screens.
-	@media ( min-width: break( small ) ) {
+// 1 column.
+.columns-1 .blocks-gallery-item {
+    width: calc( 100% / 1 - 16px );
+}
 
-		@for $i from 3 through 8 {
-
-			&.columns-#{ $i } .blocks-gallery-item {
-				width: calc( 100% / #{ $i } - 16px );
-			}
-		}
-	}
-
-	[data-align="left"] &,
-	[data-align="right"] &,
-	&.alignleft,
-	&.alignright {
-		max-width: content-width() / 2;
-		width:     100%;
-	}
+// 3-8 columns on larger screens.
+@media (min-width: break(small)) {
+    @for $i from 3 through 8 {
+        .columns-#{$i} .blocks-gallery-item {
+            width: calc( 100% / #{$i} - 16px );
+        }
+    }
 }
