--- a/resources/scss/components/__index.scss
+++ b/resources/scss/components/__index.scss
@@ -31,6 +31,7 @@
 @import 'nav-menu';
 @import 'nav-pagination';
 @import 'nav-toggle';
+@import 'page-builder';
 @import 'page-head';
 @import 'post-list';
 @import 'post-nav';
