--- a/resources/scss/components/_app-search.scss
+++ b/resources/scss/components/_app-search.scss
@@ -32,7 +32,7 @@
         padding-left: 15px;
         font-family: $bold-font-family;
         font-weight: normal;
-        background: $white url(../svg/search.svg) 10px 50% no-repeat;
+        background: transparent url(../svg/search.svg) 10px 50% no-repeat;
         background-size: 16px 16px;
         color: $blue-dark;
         outline: none;
