--- a/resources/scss/components/_app-content.scss
+++ b/resources/scss/components/_app-content.scss
@@ -19,6 +19,10 @@
     max-width: 100%;
   }
 
+  .transparent_header & {
+    padding-top: 0;
+  }
+
   .has-sidebar & {
     display: flex;
     flex-flow: row wrap;
