--- a/resources/scss/components/_page-builder.scss
+++ b/resources/scss/components/_page-builder.scss
@@ -6,81 +6,48 @@
 
 ////
 
-.text-shadow {
-    text-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
-}
+.fl-module-heading {
+    &.section_header {
+        h3.fl-heading {
+            @include font-size(20px);
 
-.box-shadow {
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
-
-    &__card {
-        .fl-col-content {
-            box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+            &:after {
+                content: ' ';
+                display: block;
+                width: 100px;
+                border: 0.5px solid $gray-lighter;
+                margin: ($margin / 2) auto;
+            }
         }
     }
 }
 
-.inner-shadow {
-    .fl-row-content-wrap {
-        box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
-    }
-}
-
-.text-width {
-    max-width: 800px;
-    margin: 0 auto;
-}
-
-.green-line {
-    border-left: 6px solid $green;
-    margin-bottom: $margin;
-}
-
-.rounded-corners {
-    border-radius: 3px;
-}
-
-.link-box {
-    width: 100%;
-    height: 100%;
-
-    &__title {
-        text-align: center;
-        margin-bottom: 0;
-        transition: all .2s ease-in-out;
-        padding: 123px $margin;
-        color: $white;
-        height: 100%;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        &:hover {
-            background-color: rgba(0, 0, 0, 0.3);
+.fl-module-rich-text {
+    &.no-margin {
+        p {
+            margin: 0;
         }
     }
 }
 
-.full-height-content {
-    .fl-module,
-    .fl-module-content,
-    .fl-html {
-        height: 100%;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-}
+// Guide List - Made to look like Blog post cards
 
+.guide-list {
+    .fl-callout {
+        background-color: $white;
+        border-radius: 3px;
+        box-shadow: 0 1px 3px 0 rgba(53, 69, 88, 0.2);
+        padding: $margin / 2;
+        padding-bottom: $margin;
+        overflow: hidden;
 
-.button-centered {
-    .fl-html {
-        text-align: center;
-
-        .btn {
-            margin: 0 ($margin / 2);
+        img {
+            margin-right: -$margin;
+            margin-left: -$margin;
+            margin-top: -$margin;
+            margin-bottom: $margin;
+            max-width: calc(100% + #{$margin * 2.2});
+            border-radius: 3px 3px 0 0;
         }
     }
 }
