--- a/resources/scss/components/_nav-menu.scss
+++ b/resources/scss/components/_nav-menu.scss
@@ -38,16 +38,20 @@
         .nav-open & {
             visibility: visible;
             opacity: 1;
-            top: 115px;
+            top: $app-header-height;
             display: block;
         }
 
         .nav-open.detached & {
-            top: 75px;
+            top: $app-header-height;
         }
 
         .admin-bar .nav-open & {
-            top: 120px;
+            top: $app-header-height + 32;
+
+            @include mq(wp-mobile) {
+                top: $app-header-height + 46;
+            }
         }
     }
 
@@ -79,7 +83,7 @@
         }
 
 
-        @include mq(tablet-portrait-up) {
+        @include mq(desktop-nav) {
             &:hover {
                 > ul {
                     z-index: 0;
@@ -174,7 +178,7 @@
             padding: $margin / 2;
         }
 
-        @include mq(tablet-landscape-up) {
+        @include mq(desktop-nav) {
             padding: $margin / 2;
         }
 
@@ -206,7 +210,7 @@
         max-height: 0;
         transition: all .3s ease-in-out;
 
-        @include mq(tablet-portrait-up) {
+        @include mq(desktop-nav) {
             opacity: 0;
             visibility: hidden;
             position: absolute;
@@ -265,7 +269,7 @@
 
 
             &:hover {
-                @include mq(tablet-portrait-up) {
+                @include mq(desktop-nav) {
                     background-color: $subnav-bg-hover;
                     color: $subnav-color-hover;
                 }
