--- a/resources/scss/tools/__index.scss
+++ b/resources/scss/tools/__index.scss
@@ -9,6 +9,7 @@
 /// @link   https:spigotdesign.com
 ////
 
+@import 'alignment';
 @import 'functions';
 @import 'placeholder';
 @import 'font-size';
