--- a/resources/scss/settings/_dimensions.scss
+++ b/resources/scss/settings/_dimensions.scss
@@ -1,21 +1,31 @@
 // Dimensions
 
-$base-font-size:    	16px;
-$base-line-height:  	24px;
+$base-font-size:    			16px;
+$base-line-height:  			24px;
 
-$base-radius:       	3px;
+$base-radius:       			3px;
 
-$base-spacing-unit: 	$base-line-height;
-$margin:				$base-spacing-unit;
+$base-spacing-unit: 			$base-line-height;
+$margin:						$base-spacing-unit;
 
-$site-max-width:		1200px;
-$site-width:			$site-max-width;
+$site-max-width:				1200px;
+$site-width:					$site-max-width;
 
-$post-width:			900px;
+$post-width:					900px;
 
-$app-header-height:		75px;
+$app-header-height:				75px;
+$app-header-height-detatched:	50px;
 
-$border-radius:			3px;
+$border-radius:					3px;
+
+// Logo dimensions
+$logo-width:            		200px;
+$logo-height:           		47px;
+$logo-width-mobile:     		150px;
+$logo-height-mobile:    		35px;
+$logo-width-detached:   		$logo-width-mobile;
+$logo-height-detached:  		$logo-height-mobile;
+
 
 @function content-width() {
 	@return 750;
