--- a/resources/scss/settings/_colors.scss
+++ b/resources/scss/settings/_colors.scss
@@ -21,12 +21,24 @@ $gray-lightest:					#F8F9F9;
 $blue:							#2DA3ED;
 $blue-dark:						#004071; // set
 $blue-light:					#EBF5F2;
+
 $purple:						#A85ECE;
 $red:							#a00;
 $green:         				#789165; // set
 
+// Fix these colors
+$blue-darkest:					#EBF5F2;
+$purple-dark:					purple;
+$purple-darkest:				purple;
+
 // Corporate Colors
 $woocommerce-purple:			#a46497;
+$insta-pink:					#cd486b;
+$insta-purple:					#8a3ab9;
+$twitter-blue:					#55acee;
+$facebook-blue:					#3b5998;
+$pinterest:						#cb2027;
+$instagram-color:				#cd486b;
 
 // WooCommerce Colors
 $primary-color:					$red;
