--- a/resources/scss/blocks/_wp-block-separator.scss
+++ b/resources/scss/blocks/_wp-block-separator.scss
@@ -7,5 +7,9 @@
 ////
 
 .wp-block-separator {
-
+	border: 0;
+    height: 0;
+    border-top: 3px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 3px solid rgba(255, 255, 255, 0.3);
+    margin-bottom: $margin;
 }
