--- a/resources/scss/components/_nav-menu.scss
+++ b/resources/scss/components/_nav-menu.scss
@@ -11,10 +11,13 @@
         //position: relative;
         //top: 2px;
         //margin: 0 ($margin / 4);
+   
     }
 
     .detached & {
-      height: 50px;
+        @include mq(desktop-nav) {
+            height: 50px;
+        }
     }
 }
 
@@ -22,7 +25,7 @@
     position: relative;
     display: flex;
     align-items: center;
-    
+
     @include mq(mobile-nav) {
         position: fixed;
         visibility: hidden;
@@ -194,8 +197,8 @@
             padding-bottom: $margin / 2;
 
             &:hover {
-              color: $nav-color-mobile-hover;
-              background-color: $nav-bg-mobile-hover;
+                color: $nav-color-mobile-hover;
+                background-color: $nav-bg-mobile-hover;
             }
         }
     }
@@ -239,12 +242,13 @@
 
             &:last-child {
                 @include mq(mobile-nav) {
-                    padding-bottom: $margin/2;
+                    padding-bottom: $margin / 2;
 
                     .menu__link {
                         border-radius: 0;
                     }
                 }
+
 
                 .menu__link {
                     border-radius: 0 0 3px 3px;
@@ -259,11 +263,13 @@
 
             @include mq(mobile-nav) {
                 @include font-size(15px);
-                color:$subnav-color-mobile;
+
+                color: $subnav-color-mobile;
                 padding: 10px 24px;
+
                 &:hover {
-                  background-color: $subnav-bg-mobile-hover;
-                  color: $subnav-color-mobile-hover;
+                    background-color: $subnav-bg-mobile-hover;
+                    color: $subnav-color-mobile-hover;
                 }
             }
 
@@ -275,15 +281,13 @@
                 }
             }
         }
-
-        
     }
 
     .subnav-open .menu__sub-menu {
-            z-index: 0;
-            visibility: visible;
-            opacity: 1;
-            height: auto;
-            max-height: 600px;
-        }
+        z-index: 0;
+        visibility: visible;
+        opacity: 1;
+        height: auto;
+        max-height: 600px;
+    }
 }
