--- a/resources/scss/components/_post-nav.scss
+++ b/resources/scss/components/_post-nav.scss
@@ -7,18 +7,27 @@
     flex-flow: row nowrap;
     justify-content: space-between;
 
+    @include mq(phone-only) {
+        flex-wrap: wrap;
+    }
+
+
     a {
-    	flex: 0 1 49%;
-    	background-color: $link-color;
-    	color: $white;
-    	display: block;
-    	text-align: center;
-    	border-radius: $border-radius;
-    	padding: ($margin / 2) $margin;
+        flex: 0 1 100%;
+        background-color: $link-color;
+        color: $white;
+        display: block;
+        text-align: center;
+        border-radius: $border-radius;
+        padding: ($margin / 2) $margin;
+        margin: 0 ($margin / 2);
 
-    	&:hover {
-    		background-color: $link-color-hover;
-    	}
+        &:hover {
+            background-color: $link-color-hover;
+        }
 
+        @include mq(phone-only) {
+            margin-bottom: 5px;
+        }
     }
 }
