--- a/resources/scss/settings/_woocommerce.scss
+++ b/resources/scss/settings/_woocommerce.scss
@@ -15,14 +15,17 @@ $secondary-color: $blue;
 $woo-account-header-bg: $red;
 $star-rating-yellow: #f5a623;
 
-// Cart/Checkout Settings
+// Cart/Checkout Sidebar Settings
 $cart-sidebar-bg: $blue;
 $cart-sidebar-text-color: $white;
 $cart-sidebar-header-color: $cart-sidebar-text-color;
 $cart-sidebar-border-color: rgba($white, 0.2);
 $cart-sidebar-link-color: $link-color;
 $cart-sidebar-link-color-hover: $link-color-hover;
+$cart-sidebar-highlight-color: $white;
 
 // Messages
 $woo-message-button-bg: $red;
 $woo-message-bg: $red;
+
+// Buttons
